--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h1>Liste des utilisateurs</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Email</th>
-                <th>Password</th>
                 <th>Role</th>
                 <th>CreatedAt</th>
                 <th>UpdatedAt</th>
@@ -22,13 +21,12 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.role }}</td>
                 <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    {# <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a> #}
-                    {# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a> #}
+                    <a href="{{ path('back_user_show', {'id': user.id}) }}">show</a>
+                    <a href="{{ path('back_user_update', {'id': user.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -39,5 +37,5 @@
         </tbody>
     </table>
 
-    {# <a href="{{ path('app_user_new') }}">Create new</a> #}
+    <a href="{{ path('back_user_add') }}">Create new</a>
 {% endblock %}
