--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -36,7 +36,7 @@
 
     <a href="{{ path('back_user_index') }}">back to list</a>
 
-    <a href="{{ path('back_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('back_user_add', {'id': user.id}) }}">edit</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
