--- a/templates/technology/index.html.twig
+++ b/templates/technology/index.html.twig
@@ -24,8 +24,8 @@
                 <td>{{ technology.technologyName }}</td>
                 <td>{{ technology.createdAt ? technology.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ technology.updatedAt ? technology.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ technology.backgroundColor }}</td>
-                <td>{{ technology.textColor }}</td>
+                <td>{% if technology.backgroundColor %}<div style="background: {{ technology.backgroundColor }}; border: 2px solid {{ technology.backgroundColor }}; height: 20px; width: 20px;"></div> {% endif %} </td>
+                <td>{% if technology.textColor %}<div style="background: {{ technology.textColor }}; border: 2px solid {{ technology.textColor }}; height: 20px; width: 20px"></div>{% endif %}</td>
                 <td>
                     <a href="{{ path('back_technology_show', {'id': technology.id}) }}">show</a>
                     <a href="{{ path('back_technology_edit', {'id': technology.id}) }}">edit</a>
