templates formatting : WIP

--- a/templates/jobtitle/index.html.twig
+++ b/templates/jobtitle/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Jobtitle index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Jobtitle index</h1>
 
     <table class="table">
@@ -36,4 +37,5 @@
     </table>
 
     <a href="{{ path('back_jobtitle_new') }}">Create new</a>
+</div>
 {% endblock %}
