--- a/templates/sector/index.html.twig
+++ b/templates/sector/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Sector index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Sector index</h1>
 
     <table class="table">
@@ -36,4 +37,5 @@
     </table>
 
     <a href="{{ path('back_sector_new') }}">Create new</a>
+</div>
 {% endblock %}
