--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,11 +10,13 @@
         <!-- Bootstrap icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <!-- Our custom CSS -->
-        {# <link rel="stylesheet" href="{{ asset('css/match_job.css') }}"> #}
+        <link href="{{ asset('css/match_job.css') }}" rel="stylesheet" >
         <!-- favicon -->
         {# <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/x-icon"> #}
     </head>
     <body>
+        <div class="container-fluid">
         {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
