--- a/templates/contract/edit.html.twig
+++ b/templates/contract/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Contract{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Contract</h1>
 
     {{ include('contract/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_contract_index') }}">back to list</a>
 
     {{ include('contract/_delete_form.html.twig') }}
+</div>
 {% endblock %}
