--- a/templates/contract/new.html.twig
+++ b/templates/contract/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Contract{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Contract</h1>
 
     {{ include('contract/_form.html.twig') }}
 
     <a href="{{ path('back_contract_index') }}">back to list</a>
+</div>
 {% endblock %}
