--- a/templates/contract/show.html.twig
+++ b/templates/contract/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Contract{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Contract</h1>
 
     <table class="table">
@@ -31,4 +32,5 @@
     <a href="{{ path('back_contract_edit', {'id': contract.id}) }}">edit</a>
 
     {{ include('contract/_delete_form.html.twig') }}
+</div>
 {% endblock %}
