--- a/templates/experience/edit.html.twig
+++ b/templates/experience/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Experience{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Experience</h1>
 
     {{ include('experience/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_experience_index') }}">back to list</a>
 
     {{ include('experience/_delete_form.html.twig') }}
+</div>
 {% endblock %}
