--- a/templates/experience/new.html.twig
+++ b/templates/experience/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Experience{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Experience</h1>
 
     {{ include('experience/_form.html.twig') }}
 
     <a href="{{ path('back_experience_index') }}">back to list</a>
+</div>
 {% endblock %}
