--- a/templates/experience/show.html.twig
+++ b/templates/experience/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Experience{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Experience</h1>
 
     <table class="table">
@@ -31,4 +32,5 @@
     <a href="{{ path('back_experience_edit', {'id': experience.id}) }}">edit</a>
 
     {{ include('experience/_delete_form.html.twig') }}
+</div>
 {% endblock %}
