--- a/templates/jobtitle/edit.html.twig
+++ b/templates/jobtitle/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Jobtitle{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Jobtitle</h1>
 
     {{ include('jobtitle/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_jobtitle_index') }}">back to list</a>
 
     {{ include('jobtitle/_delete_form.html.twig') }}
+</div>
 {% endblock %}
