--- a/templates/jobtitle/show.html.twig
+++ b/templates/jobtitle/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Jobtitle{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Jobtitle</h1>
 
     <table class="table">
@@ -31,4 +32,5 @@
     <a href="{{ path('back_jobtitle_edit', {'id': jobtitle.id}) }}">edit</a>
 
     {{ include('jobtitle/_delete_form.html.twig') }}
+</div>
 {% endblock %}
