--- a/templates/salary/edit.html.twig
+++ b/templates/salary/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Salary{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Salary</h1>
 
     {{ include('salary/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_salary_index') }}">back to list</a>
 
     {{ include('salary/_delete_form.html.twig') }}
+</div>
 {% endblock %}
