--- a/templates/salary/index.html.twig
+++ b/templates/salary/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Salary index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Salary index</h1>
 
     <table class="table">
@@ -36,4 +37,5 @@
     </table>
 
     <a href="{{ path('back_salary_new') }}">Create new</a>
+</div>
 {% endblock %}
