--- a/templates/salary/show.html.twig
+++ b/templates/salary/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Salary{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Salary</h1>
 
     <table class="table">
@@ -31,4 +32,5 @@
     <a href="{{ path('back_salary_edit', {'id': salary.id}) }}">edit</a>
 
     {{ include('salary/_delete_form.html.twig') }}
+</div>
 {% endblock %}
