--- a/templates/sector/edit.html.twig
+++ b/templates/sector/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Sector{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Sector</h1>
 
     {{ include('sector/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_sector_index') }}">back to list</a>
 
     {{ include('sector/_delete_form.html.twig') }}
+</div>
 {% endblock %}
