--- a/templates/sector/new.html.twig
+++ b/templates/sector/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Sector{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Sector</h1>
 
     {{ include('sector/_form.html.twig') }}
 
     <a href="{{ path('back_sector_index') }}">back to list</a>
+</div>
 {% endblock %}
