--- a/templates/sector/show.html.twig
+++ b/templates/sector/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Sector{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Sector</h1>
 
     <table class="table">
@@ -31,4 +32,5 @@
     <a href="{{ path('back_sector_edit', {'id': sector.id}) }}">edit</a>
 
     {{ include('sector/_delete_form.html.twig') }}
+</div>
 {% endblock %}
