--- a/templates/technology/edit.html.twig
+++ b/templates/technology/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Technology{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Technology</h1>
 
     {{ include('technology/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('back_technology_index') }}">back to list</a>
 
     {{ include('technology/_delete_form.html.twig') }}
+</div>
 {% endblock %}
