--- a/templates/technology/index.html.twig
+++ b/templates/technology/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Technology index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Technology index</h1>
 
     <table class="table">
@@ -40,4 +41,5 @@
     </table>
 
     <a href="{{ path('back_technology_new') }}">Create new</a>
+</div>
 {% endblock %}
