--- a/templates/technology/new.html.twig
+++ b/templates/technology/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Technology{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Create new Technology</h1>
 
     {{ include('technology/_form.html.twig') }}
 
     <a href="{{ path('back_technology_index') }}">back to list</a>
+</div>
 {% endblock %}
