--- a/templates/technology/show.html.twig
+++ b/templates/technology/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Technology{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Technology</h1>
 
     <table class="table">
@@ -39,4 +40,5 @@
     <a href="{{ path('back_technology_edit', {'id': technology.id}) }}">edit</a>
 
     {{ include('technology/_delete_form.html.twig') }}
+</div>
 {% endblock %}
