--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Liste des utilisateurs</h1>
+
+    <a href="{{ path('back_user_add') }}" class="btn btn-info mb-2">Ajouter un utilisateur</a>
 
     <table class="table">
         <thead>
@@ -37,5 +40,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_user_add') }}">Create new</a>
+</div>
 {% endblock %}
