--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>User</h1>
 
     <table class="table">
@@ -39,4 +40,5 @@
     <a href="{{ path('back_user_add', {'id': user.id}) }}">edit</a>
 
     {{ include('user/_delete_form.html.twig') }}
+</div>
 {% endblock %}
