--- a/templates/contract/edit.html.twig
+++ b/templates/contract/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Contract{% endblock %}
+{% block title %}Modifier type contract{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Edit Contract</h1>
+    <h1>Modifier le type de contract</h1>
 
-    {{ include('contract/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('contract/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    <a href="{{ path('back_contract_index') }}">back to list</a>
+    <a href="{{ path('back_contract_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
     {{ include('contract/_delete_form.html.twig') }}
 </div>
