--- a/templates/contract/show.html.twig
+++ b/templates/contract/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contract{% endblock %}
+{% block title %}Contrat{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Contract</h1>
+    <h1>Contrat</h1>
 
     <table class="table">
         <tbody>
@@ -27,9 +27,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_contract_index') }}">back to list</a>
+    <a href="{{ path('back_contract_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_contract_edit', {'id': contract.id}) }}">edit</a>
+    <a href="{{ path('back_contract_edit', {'id': contract.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('contract/_delete_form.html.twig') }}
 </div>
