--- a/templates/experience/index.html.twig
+++ b/templates/experience/index.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Experience index{% endblock %}
+{% block title %}Liste des expériences{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Experience index</h1>
+    <h1>Liste des niveaux d'expériences</h1>
+
+    <a href="{{ path('back_experience_new') }}" class="btn btn-info mb-2">Ajouter un niveau d'expérience</a>
 
     <table class="table">
         <thead>
@@ -13,7 +15,7 @@
                 <th>YearsNumber</th>
                 <th>CreatedAt</th>
                 <th>UpdatedAt</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -24,8 +26,8 @@
                 <td>{{ experience.createdAt ? experience.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ experience.updatedAt ? experience.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('back_experience_show', {'id': experience.id}) }}">show</a>
-                    <a href="{{ path('back_experience_edit', {'id': experience.id}) }}">edit</a>
+                    <a href="{{ path('back_experience_edit', {'id': experience.id}) }}" class="btn btn-success btn-sm">Modifier</a>
+                    <a href="{{ path('back_experience_delete', {'id': experience.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
                 </td>
             </tr>
         {% else %}
@@ -36,6 +38,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_experience_new') }}">Create new</a>
 </div>
 {% endblock %}
