--- a/templates/jobtitle/edit.html.twig
+++ b/templates/jobtitle/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Jobtitle{% endblock %}
+{% block title %}Modifier titre emploi{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Edit Jobtitle</h1>
+    <h1>Modifier le titre de l'emploi</h1>
 
-    {{ include('jobtitle/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('jobtitle/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    <a href="{{ path('back_jobtitle_index') }}">back to list</a>
+    <a href="{{ path('back_jobtitle_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
     {{ include('jobtitle/_delete_form.html.twig') }}
 </div>
