--- a/templates/jobtitle/index.html.twig
+++ b/templates/jobtitle/index.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Jobtitle index{% endblock %}
+{% block title %}Liste titre emplois{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Jobtitle index</h1>
+    <h1>Liste des titres d'emplois</h1>
+
+    <a href="{{ path('back_jobtitle_new') }}" class="btn btn-info mb-2">Ajouter un titre d'emploi</a>
 
     <table class="table">
         <thead>
@@ -13,7 +15,7 @@
                 <th>Title</th>
                 <th>CreatedAt</th>
                 <th>UpdatedAt</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -24,8 +26,8 @@
                 <td>{{ jobtitle.createdAt ? jobtitle.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ jobtitle.updatedAt ? jobtitle.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('back_jobtitle_show', {'id': jobtitle.id}) }}">show</a>
-                    <a href="{{ path('back_jobtitle_edit', {'id': jobtitle.id}) }}">edit</a>
+                    <a href="{{ path('back_jobtitle_edit', {'id': jobtitle.id}) }}" class="btn btn-success btn-sm">Modifier</a>
+                    <a href="{{ path('back_jobtitle_delete', {'id': jobtitle.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
                 </td>
             </tr>
         {% else %}
@@ -36,6 +38,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_jobtitle_new') }}">Create new</a>
 </div>
 {% endblock %}
