--- a/templates/jobtitle/new.html.twig
+++ b/templates/jobtitle/new.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Jobtitle{% endblock %}
+{% block title %}Ajout titre emploi{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Create new Jobtitle</h1>
+    <h1>Ajout d'un titre d'emploi</h1>
 
     {{ include('jobtitle/_form.html.twig') }}
 
-    <a href="{{ path('back_jobtitle_index') }}">back to list</a>
+    <a href="{{ path('back_jobtitle_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 </div>
 {% endblock %}
