--- a/templates/jobtitle/show.html.twig
+++ b/templates/jobtitle/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Jobtitle{% endblock %}
+{% block title %}Titre emploi{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Jobtitle</h1>
+    <h1>Titre de l'emploi</h1>
 
     <table class="table">
         <tbody>
@@ -27,9 +27,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_jobtitle_index') }}">back to list</a>
+    <a href="{{ path('back_jobtitle_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_jobtitle_edit', {'id': jobtitle.id}) }}">edit</a>
+    <a href="{{ path('back_jobtitle_edit', {'id': jobtitle.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('jobtitle/_delete_form.html.twig') }}
 </div>
