--- a/templates/salary/index.html.twig
+++ b/templates/salary/index.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Salary index{% endblock %}
+{% block title %}Liste tranches salaires{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Salary index</h1>
+    <h1>Liste des tranches de salaires</h1>
+
+    <a href="{{ path('back_salary_new') }}" class="btn btn-info mb-2">Ajouter une tranche de salaire</a>
 
     <table class="table">
         <thead>
@@ -13,7 +15,7 @@
                 <th>Name</th>
                 <th>CreatedAt</th>
                 <th>UpdatedAt</th>
-                <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -24,8 +26,8 @@
                 <td>{{ salary.createdAt ? salary.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ salary.updatedAt ? salary.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('back_salary_show', {'id': salary.id}) }}">show</a>
-                    <a href="{{ path('back_salary_edit', {'id': salary.id}) }}">edit</a>
+                    <a href="{{ path('back_salary_edit', {'id': salary.id}) }}" class="btn btn-success btn-sm">Modifier</a>
+                    <a href="{{ path('back_salary_delete', {'id': salary.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
                 </td>
             </tr>
         {% else %}
@@ -36,6 +38,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_salary_new') }}">Create new</a>
 </div>
 {% endblock %}
