--- a/templates/salary/show.html.twig
+++ b/templates/salary/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Salary{% endblock %}
+{% block title %}Tranche salaire{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Salary</h1>
+    <h1>Tranche de salaire</h1>
 
     <table class="table">
         <tbody>
@@ -27,9 +27,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_salary_index') }}">back to list</a>
+    <a href="{{ path('back_salary_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_salary_edit', {'id': salary.id}) }}">edit</a>
+    <a href="{{ path('back_salary_edit', {'id': salary.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('salary/_delete_form.html.twig') }}
 </div>
