--- a/templates/sector/_delete_form.html.twig
+++ b/templates/sector/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('back_sector_delete', {'id': sector.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ sector.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-sm">Supprimer</button>
 </form>
