--- a/templates/sector/edit.html.twig
+++ b/templates/sector/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Sector{% endblock %}
+{% block title %}Modifier secteur activité{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Edit Sector</h1>
+    <h1>Modifier secteur d'activité</h1>
 
-    {{ include('sector/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('sector/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    <a href="{{ path('back_sector_index') }}">back to list</a>
+    <a href="{{ path('back_sector_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
     {{ include('sector/_delete_form.html.twig') }}
 </div>
