--- a/templates/sector/new.html.twig
+++ b/templates/sector/new.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Sector{% endblock %}
+{% block title %}Ajout secteur activité{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Create new Sector</h1>
+    <h1>Ajout d'un secteur d'activité</h1>
 
     {{ include('sector/_form.html.twig') }}
 
-    <a href="{{ path('back_sector_index') }}">back to list</a>
+    <a href="{{ path('back_sector_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 </div>
 {% endblock %}
