--- a/templates/sector/show.html.twig
+++ b/templates/sector/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sector{% endblock %}
+{% block title %}Secteur activité{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Sector</h1>
+    <h1>Secteur d'activité</h1>
 
     <table class="table">
         <tbody>
@@ -27,9 +27,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_sector_index') }}">back to list</a>
+    <a href="{{ path('back_sector_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_sector_edit', {'id': sector.id}) }}">edit</a>
+    <a href="{{ path('back_sector_edit', {'id': sector.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('sector/_delete_form.html.twig') }}
 </div>
