--- a/templates/technology/edit.html.twig
+++ b/templates/technology/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Technology{% endblock %}
+{% block title %}Modifier technologie{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Edit Technology</h1>
+    <h1>Modifier technologie</h1>
 
-    {{ include('technology/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('technology/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    <a href="{{ path('back_technology_index') }}">back to list</a>
+    <a href="{{ path('back_technology_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
     {{ include('technology/_delete_form.html.twig') }}
 </div>
