--- a/templates/technology/show.html.twig
+++ b/templates/technology/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Technology{% endblock %}
+{% block title %}Technologie{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Technology</h1>
+    <h1>Technologie</h1>
 
     <table class="table">
         <tbody>
@@ -35,9 +35,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_technology_index') }}">back to list</a>
+    <a href="{{ path('back_technology_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_technology_edit', {'id': technology.id}) }}">edit</a>
+    <a href="{{ path('back_technology_edit', {'id': technology.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('technology/_delete_form.html.twig') }}
 </div>
