--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier utilisateur{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Edit User</h1>
+    <h1>Modifier utilisateur</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Valider'}) }}
 
-    <a href="{{ path('back_user_index') }}">back to list</a>
+    <a href="{{ path('back_user_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
     {{ include('user/_delete_form.html.twig') }}
 </div>
