--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Utilisateur{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
@@ -35,9 +35,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('back_user_index') }}">back to list</a>
+    <a href="{{ path('back_user_index') }}" class="btn btn-primary btn-sm">Retour à la liste</a>
 
-    <a href="{{ path('back_user_add', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('back_user_update', {'id': user.id}) }}" class="btn btn-success btn-sm float-end">Modifier</a>
 
     {{ include('user/_delete_form.html.twig') }}
 </div>
