--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,14 +22,14 @@
         <div class="container-fluid d-flex">
         <nav class="navbar navbar-expand-lg d-flex align-items-start">
             <ul class="navbar-nav text-light d-flex flex-wrap flex-column">
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_home') }}"><i class="bi bi-house-fill"></i><span>Home</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_user_index') }}"><i class="bi bi-person-fill"></i><span>Utilisateurs</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_contract_index') }}"><i class="bi bi-pen-fill"></i><span>Types de contrats</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_experience_index') }}"><i class="bi bi-award-fill"></i><span>Niveaux d'expériences</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_jobtitle_index') }}"><i class="bi bi-chat-left-text-fill"></i><span>Titres de l'emploi</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_salary_index') }}"><i class="bi bi-currency-dollar"></i><span>Tranches de salaires</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_sector_index') }}"><i class="bi bi-building"></i><span>Secteurs d'activités</span></a></li>
-                <li class="nav-item"><a class="nav-link active" href="{{ path('back_technology_index') }}"><i class="bi bi-diagram-2-fill"></i><span>Technologies</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_home') }}"><i class="bi bi-house-fill icon-menu"></i><span>Home</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_user_index') }}"><i class="bi bi-person-fill icon-menu"></i><span>Utilisateurs</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_contract_index') }}"><i class="bi bi-pen-fill icon-menu"></i><span>Types de contrats</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_experience_index') }}"><i class="bi bi-award-fill icon-menu"></i><span>Niveaux d'expériences</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_jobtitle_index') }}"><i class="bi bi-chat-left-text-fill icon-menu"></i><span>Titres de l'emploi</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_salary_index') }}"><i class="bi bi-currency-dollar icon-menu"></i><span>Tranches de salaires</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_sector_index') }}"><i class="bi bi-building icon-menu"></i><span>Secteurs d'activités</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="{{ path('back_technology_index') }}"><i class="bi bi-diagram-2-fill icon-menu"></i><span>Technologies</span></a></li>
             </ul>
         </nav>
         <div class="container-fluid table">
