--- a/public/css/matchjob.css
+++ b/public/css/matchjob.css
@@ -9,19 +9,26 @@
     color: white;
     border-color: #0d2a2c; 
 }
+  
+body {
+   color: #026e47;
+   background-color: #EDDCC4;
+}
 
-.btn-danger button{
-    background-color: #dc3545;
+header{
+    display: flex;
+    align-items: center
+}
+
+.logo{
+    width: 4%;
+    padding: 1em;
 }
 
 .main-title{
     color:#026e47;
     font-size: xx-large;
-}
-  
-body {
-   color: #026e47;
-   background-color: #EDDCC4;
+    font-weight: bold;
 }
 
 .navbar{
@@ -48,7 +55,7 @@ body {
     margin-bottom: 0.4em;
 }
 
-.table{
+.table-content{
     background-color: white;
 }
 
@@ -58,9 +65,10 @@ body {
 }
 
 .badge{
-    color: black;
+    color: white;
     background-color: #026e47;
     font-size: 20px;
+    border-radius: 25% 10%;
 }
 
 .category{
@@ -82,6 +90,7 @@ body {
 .card-title{
     color: #026e47;
     font-size: 25px;
+    height: 60px;
 }
 
 .categories{
