--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,15 @@
         <img class="logo" src="{{ asset('Match-Job.svg') }}" alt="logo">
         <div class="main-title">MATCH-JOB</div>
         </header>
+        {% if is_granted('ROLE_ADMIN') %}
+        <div class="d-flex justify-content-end me-4 mb-2 align-items-center">
+            <i class="bi bi-person-badge icon-menu"></i><span style="color:#09B33F">{{ app.user.email }} Connecté</span>
+        </div>
+        {% else %}
+        <div class="d-flex justify-content-end me-4 mb-2 align-items-center">
+            <i class="bi bi-person-badge icon-menu"></i><span style="color:#9E0808"> Déconnecté</span>
+        </div>   
+        {% endif %}
         <div class="container-fluid d-flex">
         <nav class="navbar navbar-expand-lg d-flex align-items-start">
             <ul class="navbar-nav text-light d-flex flex-wrap flex-column">
@@ -30,6 +39,9 @@
                 <li class="nav-item"><a class="nav-link active" href="{{ path('back_salary_index') }}"><i class="bi bi-currency-dollar icon-menu"></i><span>Tranches de salaires</span></a></li>
                 <li class="nav-item"><a class="nav-link active" href="{{ path('back_sector_index') }}"><i class="bi bi-building icon-menu"></i><span>Secteurs d'activités</span></a></li>
                 <li class="nav-item"><a class="nav-link active" href="{{ path('back_technology_index') }}"><i class="bi bi-diagram-2-fill icon-menu"></i><span>Technologies</span></a></li>
+                {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item"><a class="nav-link logout active" href="{{ path('logout') }}"><i class="bi bi-box-arrow-right icon-menu"></i><span>Déconnexion</span></a></li>
+                {% endif %}
             </ul>
         </nav>
         <div class="container-fluid table-content">
