--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,16 +1,21 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Connexion{% endblock %}
+
 {% block body %}
-<div class="container">
+
+
+
+<div class="container mt-3">
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
+<h2 class="mb-5">Connexion Back-office</h2>
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Email:</label>
+        <label for="username">Email :</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}"/>
 
-        <label for="password">Mot de passe:</label>
+        <label for="password">Mot de passe :</label>
         <input type="password" id="password" name="_password"/>
 
         {# If you want to control the URL the user is redirected to on success
@@ -18,7 +23,7 @@
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <button type="submit">Connexion</button>
+        <button class="btn btn-success btn-sm" type="submit">Connexion</button>
     </form>
 </div>    
 {% endblock %}
