--- a/templates/sector/index.html.twig
+++ b/templates/sector/index.html.twig
@@ -6,7 +6,7 @@
 <div class="container">
     <h1>Liste des secteurs d'activités</h1>
 
-    <a href="{{ path('back_experience_new') }}" class="btn btn-info mb-2">Ajouter un secteur d'activité</a>
+    <a href="{{ path('back_sector_new') }}" class="btn btn-info mb-2">Ajouter un secteur d'activité</a>
 
     <table class="table">
         <thead>
