--- a/templates/technology/_delete_form.html.twig
+++ b/templates/technology/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('back_technology_delete', {'id': technology.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('back_technology_delete', {'id': technology.id}) }}" onsubmit="return confirm('Etes vous sur de vouloir supprimer cet élément?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ technology.id) }}">
     <button class="btn btn-danger btn-sm">Supprimer</button>
 </form>
