--- a/templates/sector/index.html.twig
+++ b/templates/sector/index.html.twig
@@ -6,6 +6,8 @@
 <div class="container">
     <h1>Liste des secteurs d'activités</h1>
 
+    {{ include('flash_messages.html.twig') }}
+
     <a href="{{ path('back_sector_new') }}" class="btn btn-info mb-2">Ajouter un secteur d'activité</a>
 
     <table class="table">
