--- a/templates/jobtitle/index.html.twig
+++ b/templates/jobtitle/index.html.twig
@@ -6,6 +6,8 @@
 <div class="container">
     <h1>Liste des titres d'emplois</h1>
 
+    {{ include('flash_messages.html.twig') }}
+
     <a href="{{ path('back_jobtitle_new') }}" class="btn btn-info mb-2">Ajouter un titre d'emploi</a>
 
     <table class="table">
