--- a/templates/salary/index.html.twig
+++ b/templates/salary/index.html.twig
@@ -6,6 +6,8 @@
 <div class="container">
     <h1>Liste des tranches de salaires</h1>
 
+    {{ include('flash_messages.html.twig') }}
+
     <a href="{{ path('back_salary_new') }}" class="btn btn-info mb-2">Ajouter une tranche de salaire</a>
 
     <table class="table">
