--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -7,6 +7,8 @@
     <h1 class="mt-3">Page not found</h1>
 
     <p>Visiblement, la page recherchée n'a pas matchée !!!</p>
+
+    <p><img src="{{ asset('images/swipe_404.gif') }}"></p>
     
 </div>
 
